# coins-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: amount.rs  currency.rs  ecb.rs  errors.rs  lib.rs  tax.rs  traits.rs
