[package]
name = "rusty_coin"
version = "0.1.0"
authors = ["cemoktra <b.schubert82@gmail.com>"]
edition = "2018"
description = "Currency calculations for rust"
readme = "README.md"
homepage = "https://github.com/cemoktra/rusty_state"
license = "MIT"
keywords = ["currency", "monetary", "financial"]

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
more-asserts = "0.2"